# study-fastapi

./: .gitignore  README.md  pyproject.toml
fast_studies/: app.py
fast_studies/settings/: settings.py
migrations/: env.py
migrations/versions/: 801b5e61d1a5_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
